# POC---Stamping-

./: README.md  RUN_ME_FIRST.md  TECH_SPEC.md  USER_MANUAL.md  pyproject.toml  validate.py
samples/board_0_02616ef1-0b2b-4cba-b83d-4a7101b2b50b/: stamp.json
samples/board_0_14aa62d8-66ea-4c88-b3c0-ce544e4c106b/: metadata.json  port1.iq  port1_meta.json  stamp.json
samples/board_0_166648c1-8e81-4e8c-af31-d903640ea244/: metadata.json  port1_meta.json  stamp.json
samples/board_0_16a3fac3-b4bf-4f7d-93de-f5c3106bb307/: metadata.json  port1_meta.json  stamp.json
samples/board_0_1b8fdec6-3b12-4992-b0f4-3ba7a451cd7e/: metadata.json  port1_meta.json  stamp.json
src/stamping/: __init__.py  gps.py  main.py  octasic.py  schemas.py  stamper.py  watcher.py
tests/: test_gps.py  test_octasic.py  test_stamper.py  test_watcher.py
tests/fixtures/sample_capture/: metadata.json  port1_meta.json
